# llm_engineering

./: pyproject.toml
week1/: day1.ipynb  day1_selenium.ipynb  day2 EXERCISE.ipynb  day5.ipynb
week1/week1_exercise/: managers.py  week1 EXERCISE.ipynb
week2/: day1.ipynb  day2.ipynb
