[project]
name = "llm-engineering"
version = "0.1.0"
description = "LLM Engineering Course Materials"
requires-python = ">=3.9,<3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "gensim>=4.3.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tqdm>=4.65.0",
    "openai>=1.0.0",
    "gradio>=4.0.0",
    "langchain>=0.0.350",
    "tiktoken>=0.5.0",
    "langchain-openai>=0.0.5",
    "langchain-experimental>=0.0.50",
    "langchain-chroma>=0.0.5",
    "langchain-core>=0.1.0",
    "langchain-text-splitters>=0.1.0",
    "langchain-community>=0.0.10",
    "datasets>=2.14.0",
    "sentencepiece>=0.1.99",
    "google-generativeai>=0.3.0",
    "anthropic>=0.7.0",
    "unstructured>=0.10.0",
    "chromadb>=0.4.0",
    "plotly>=5.15.0",
    "jupyter-dash>=0.4.0",
    "beautifulsoup4>=4.12.0",
    "pydub>=0.25.0",
    "modal>=0.55.0",
    "ollama>=0.0.1",
    "accelerate>=0.20.0",
    "psutil>=5.9.0",
    "setuptools>=68.0.0",
    "speedtest-cli>=2.1.0",
    "sentence-transformers>=2.2.0",
    "feedparser>=6.0.0",
    "pyarrow>=12.0.0",
    "twilio>=8.0.0",
]


[tool.uv]
dev-dependencies = ["pytest", "black", "flake8", "mypy"]
